--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <!-- <script src="js/p5.dom.min.js"></script> -->
     <!-- <script src="js/p5.sound.min.js"></script> -->
     <!-- <script src="js/p5.collide2d.min.js"></script> -->
+    <script src="classes/rock.js"></script>
+    <script src="classes/tree.js"></script>
+    <script src="classes/enemy.js"></script>
     <script src="classes/bullet.js"></script>
+    <script src="classes/player.js"></script>
     <script src="sketch.js"></script>
   </head>
   <body>
