Make a Health Class

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- <script src="js/p5.dom.min.js"></script> -->
     <script src="js/p5.sound.min.js"></script>
     <script src="js/p5.collide2d.min.js"></script>
-    <script src="classes/button.js"></script>
+    <script src="classes/health.js"></script>
     <script src="classes/coin.js"></script>
     <script src="classes/enemy.js"></script>
     <script src="classes/bullet.js"></script>
